# jusik

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.md.bak  Makefile  README.md  design.md  openapi.json  pyproject.toml
.claude/: launch.json  settings.json
.codex/: README.md  setup.sh
.playwright-mcp/: page-2026-06-14T05-09-38-492Z.yml
docs/: environment_verification_report.md  fable5_level5_implementation_spec.md  fable5_level5_readiness_report.md  historical_data_quality.md  level_1_2_report.md  level_3_4_implementation_report.md  level_5_fable5_implementation_plan.md  level_5_operator_completion_report.md  live_trading_enablement_checklist.md  lob_spread_pricing_report.md  local_historical_data.md  operator_fallback_matrix.md  operator_runbook.md  operator_strategy_promotion_policy.md  pre_harness_report.md  pre_stage_06_hardening_report.md  real_data_migration_baseline.md  safety_checklist.md  stage_02_04_preparation_handoff.md  stage_03_backtest_validation_report.md  step_02_policy_compiler_semantic_layer_report.md  step_03_snapshot_threading_report.md  step_04_provider_bound_signals_report.md  step_05_portfolio_optimizer_report.md  step_06_batch_risk_gate_report.md  step_07_candidate_ranking_report.md  step_08_calibrated_multifactor_signal_model_report.md  step_09_walk_forward_validation_report.md  step_10_execution_simulator_report.md  step_11_reconciliation_ledger_report.md  step_12_paper_trial_metrics_report.md  step_13_attribution_operation_report.md  step_14_offline_learning_loop_report.md  strategy_authoring_and_promotion.md
(+185 files in other folders)
